--- a/src/package.json
+++ b/src/package.json
@@ -43,6 +43,7 @@
     "MVC"
   ],
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
     "debug": "^2.4.5",
