--- a/src/package.json
+++ b/src/package.json
@@ -55,7 +55,8 @@
     "joi": "10.6.0",
     "jsonwebtoken": "^8.4.0",
     "method-override": "^2.3.10",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "safer-eval": "^1.3.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
