--- a/src/package.json
+++ b/src/package.json
@@ -56,11 +56,13 @@
     "jsonwebtoken": "^8.4.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.4.7",
+    "multer": "^1.4.1",
+    "s3-uploader": "^2.0.3",
     "safer-eval": "^1.3.0"
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "commitizen": "^2.9.6",
+    "commitizen": "^3.0.5",
     "coveralls": "^3.0.0",
     "cross-env": "5.1.4",
     "cz-conventional-changelog": "1.2.0",
